<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>PolyCoffee</groupId>
  <artifactId>PolyCoffee</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>PolyCoffee</name>
  <description>PolyCoffee</description>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
</properties>

  <dependencies>
  	<dependency>
  		<groupId>jakarta.servlet</groupId>
  		<artifactId>jakarta.servlet-api</artifactId>
  		<version>6.0.0</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>jakarta.servlet.jsp.jstl</groupId>
  		<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
  		<version>3.0.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.glassfish.web</groupId>
  		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
  		<version>3.0.1</version>
  	</dependency>
  	
  	<dependency>
  		<groupId>commons-beanutils</groupId>
  		<artifactId>commons-beanutils</artifactId>
  		<version>1.9.4</version>
  	</dependency>
  	<dependency>
  		<groupId>com.sun.mail</groupId>
  		<artifactId>jakarta.mail</artifactId>
  		<version>2.0.1</version>
  	</dependency>
  	
  	<dependency>
  		<groupId>com.microsoft.sqlserver</groupId>
  		<artifactId>mssql-jdbc</artifactId>
  		<version>12.10.1.jre11</version>
  	</dependency>
  	<dependency>
  		<groupId>org.projectlombok</groupId>
  		<artifactId>lombok</artifactId>
  		<version>1.18.42</version>
  	</dependency>
  	
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>21</release>
					<encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.2.3</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>